--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ img { max-width: 100%; }
 	display: inline-block;
 	width: 172px;
 	height: 34px;
-	background: url(../img/logoe.png) left top no-repeat;
+	background: url(../img/logo.png) left top no-repeat;
 	border: 0;
 	text-indent: -999999px;
 }
